--- a/demos/cards-buttons-gradients-demo/index.html
+++ b/demos/cards-buttons-gradients-demo/index.html
@@ -13,7 +13,7 @@
                     src="images/pic1.jpg"
                     alt="pic 1"
                 >
-                <h2>Picture 1</h2>
+                <h2>Muggin'</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 <a href="#" class="anchor-button">Buy Now</a>
             </div>
@@ -22,7 +22,7 @@
                     src="images/pic2.jpg"
                     alt="pic 2"
                 >
-                <h2>Picture 2</h2>
+                <h2>Beachin'</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 <a href="#" class="anchor-button">Buy Now</a>
             </div>
@@ -31,7 +31,7 @@
                     src="images/pic3.jpg"
                     alt="pic 1"
                 >
-                <h2>Picture 3</h2>
+                <h2>Statuin'</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 <a href="#" class="anchor-button">Buy Now</a>
             </div>
@@ -40,7 +40,7 @@
                     src="images/pic4.jpg"
                     alt="pic 1"
                 >
-                <h2>Picture 4</h2>
+                <h2>Standin'</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 <a href="#" class="anchor-button">Buy Now</a>
             </div>
