--- a/demos/side-by-side-layouts-demo/index.html
+++ b/demos/side-by-side-layouts-demo/index.html
@@ -7,6 +7,28 @@
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="main">
+            <div class="single-column">
+                <div class="side-by-side">
+                    <div class="image-container">
+                        <img src="images/smart-watch.png" alt="smartwatch">
+                    </div>
+                    <div class="text-container">
+                        <h3>Pear Watch 5 is Out Now!</h3>
+                        <a href="#" class="a-btn">BUY TODAY</a>
+                    </div>
+                </div>
+                <!-- space breaker -->
+                <div class="side-by-side">
+                    <div class="image-container">
+                        <img src="images/smart-watch-2.png" alt="smart-watch-2">
+                    </div>
+                    <div class="text-container">
+                        <h3>Pear Watch 4 is On Sale!</h3>
+                        <a href="#" class="a-btn">BUY TODAY</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
