three-cards-demo

--- a/demos/side-by-side-layouts-demo/index.html
+++ b/demos/side-by-side-layouts-demo/index.html
@@ -20,13 +20,30 @@
                 </div>
                 <!-- space breaker -->
                 <div class="side-by-side">
-                    <div class="image-container">
-                        <img src="images/smart-watch-2.png" alt="smart-watch-2">
-                    </div>
                     <div class="text-container">
                         <h3>Pear Watch 4 is On Sale!</h3>
                         <a href="#" class="a-btn">BUY TODAY</a>
                     </div>
+                    <div class="image-container">
+                        <img src="images/smart-watch-2.png" alt="smart-watch-2">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- three cards-->
+        <div id="card-selection">
+            <div class="single-column card-container">
+                <div class="card">
+                    <h3>G5 Chip</h3>
+                    <p>Fast and innovative chip.</p>
+                </div>
+                <div class="card">
+                    <h3>Improved LED Screen</h3>
+                    <p>Brighter colors, smoother touch.</p>
+                </div>
+                <div class="card">
+                    <h3>600 Hour Battery</h3>
+                    <p>More power wih longer battery life.</p>
                 </div>
             </div>
         </div>
