--- a/demos/side-by-side-layouts-demo/index.html
+++ b/demos/side-by-side-layouts-demo/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Side by side Layouts - Demo</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
@@ -42,8 +43,87 @@
                     <p>Brighter colors, smoother touch.</p>
                 </div>
                 <div class="card">
-                    <h3>600 Hour Battery</h3>
+                    <h3>600hr Battery</h3>
                     <p>More power wih longer battery life.</p>
+                </div>
+            </div>
+        </div>
+        <!-- comparison tables-->
+        <div id="second-main">
+            <div class="single-column">
+                <div class="comp-container">
+                    <h3>Compare Pear Watch to your Favorite Pear Device</h3>
+                    <div class="comp-layout-1">
+                        <div class="comp-column">
+                            <h4>Pear Watch</h4>
+                            <p>
+                                <span class="label">Water Resistance</span>
+                                100m*
+                            </p>
+                            <p>
+                                <span class="label">Normal Use</span>
+                                Up to 50hrs
+                            </p>
+                            <p>
+                                <span class="label">Low Power Use</span>
+                                Up to 900hrs
+                            </p>
+                            <p>
+                                <span class="label">Precision dual-frequency GPS</span>
+                                <i class="fa-regular fa-thumbs-up"></i>
+                            </p>
+                            <p>
+                                <span class="label">EN13319 Certified</span>
+                                <i class="fa-regular fa-thumbs-up"></i>
+                            </p>
+                        </div>
+                        <div class="comp-column">
+                            <h4>Apple Watch</h4>
+                            <p>
+                                <span class="label">Water Resistance</span>
+                                20m*
+                            </p>
+                            <p>
+                                <span class="label">Normal Use</span>
+                                Up to 15hrs
+                            </p>
+                            <p>
+                                <span class="label">Low Power Use</span>
+                                Up to 20hrs
+                            </p>
+                            <p>
+                                <span class="label">Precision dual-frequency GPS</span>
+                                <i class="fa-regular fa-thumbs-down"></i>
+                            </p>
+                            <p>
+                                <span class="label">EN13319 Certified</span>
+                                <i class="fa-regular fa-thumbs-up"></i>
+                            </p>
+                        </div>
+                        <div class="comp-column">
+                            <h4>Android Watch</h4>
+                            <p>
+                                <span class="label">Water Resistance</span>
+                                7m*
+                            </p>
+                            <p>
+                                <span class="label">Normal Use</span>
+                                Up to 5hrs
+                            </p>
+                            <p>
+                                <span class="label">Low Power Use</span>
+                                Up to 8hrs
+                            </p>
+                            <p>
+                                <span class="label">Precision dual-frequency GPS</span>
+                                <i class="fa-regular fa-thumbs-down"></i>
+                            </p>
+                            <p>
+                                <span class="label">EN13319 Certified</span>
+                                <i class="fa-regular fa-thumbs-down"></i>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
