--- a/demos/side-by-side-layouts-demo/index.html
+++ b/demos/side-by-side-layouts-demo/index.html
@@ -125,6 +125,89 @@
                         </div>
                     </div>
                 </div>
+                <!-- comp table 2 -->
+                <div class="comp-container">
+                    <h3>Compare Pear Watch to your Favorite Pear Device</h3>
+                    <div class="comp-layout-2">
+                        <div class="comp-row comp-header">
+                            <div></div>
+                            <div>Pear Watch</div>
+                            <div>Apple Watch</div>
+                            <div>Android Watch</div>
+                        </div>
+                        <div class="comp-row">
+                            <div>Water Resistance</div>
+                            <div>100m*</div>
+                            <div>20m*</div>
+                            <div>7m*</div>
+                        </div>
+                        <div class="comp-row">
+                            <div>Normal Use</div>
+                            <div>Up to 50hrs</div>
+                            <div>Up to 15hrs</div>
+                            <div>Up to 5hrs</div>
+                        </div>
+                        <div class="comp-row">
+                            <div>Low Power Use</div>
+                            <div>Up to 900hrs</div>
+                            <div>Up to 20hrs</div>
+                            <div>Up to 8hrs</div>
+                        </div>
+                        <div class="comp-row">
+                            <div>Precision dual-frequency GPS</div>
+                            <div><i class="fa-regular fa-thumbs-up"></i></div>
+                            <div><i class="fa-regular fa-thumbs-down"></i></div>
+                            <div><i class="fa-regular fa-thumbs-down"></i></div>
+                        </div>
+                        <div class="comp-row">
+                            <div>EN13319 Certified</div>
+                            <div><i class="fa-regular fa-thumbs-up"></i></div>
+                            <div><i class="fa-regular fa-thumbs-up"></i></div>
+                            <div><i class="fa-regular fa-thumbs-down"></i></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- comp table 2 -->
+                <div class="comp-container">
+                    <h3>Compare Pear Watch to your Favorite Pear Device</h3>
+                    <div class="comp-layout-3">
+                        <!-- row content-->
+                        <div></div>
+                        <div class="label">Pear Watch</div>
+                        <div class="label">Apple Watch</div>
+                        <div class="label">Android Watch</div>
+                        <!-- row content-->
+                        <div></div>
+                        <div class="label">Water Resistance</div>
+                        <div class="label">100m*</div>
+                        <div class="label">20m*</div>
+                        <div class="label">7m*</div>
+                        <!-- row content-->
+                        <div></div>
+                        <div class="label">Normal Use</div>
+                        <div class="label">Up to 50hrs</div>
+                        <div class="label">up to 15hrs</div>
+                        <div class="label">Up to 5hrs</div>
+                        <!-- row content-->
+                        <div></div>
+                        <div class="label">Low Power Use</div>
+                        <div class="label">Up to 900hrs</div>
+                        <div class="label">Up to 20hrs</div>
+                        <div class="label">Up to 8hrs</div>
+                        <!-- row content-->
+                        <div></div>
+                        <div class="label">Precision dual-frequency GPS</div>
+                        <div class="label"><i class="fa-regular fa-thumbs-up"></i></div>
+                        <div class="label"><i class="fa-regular fa-thumbs-down"></i></div>
+                        <div class="label"><i class="fa-regular fa-thumbs-down"></i></div>
+                        <!-- row content-->
+                        <div></div>
+                        <div class="label">EN13319 Certified</div>
+                        <div class="label"><i class="fa-regular fa-thumbs-up"></i></div>
+                        <div class="label"><i class="fa-regular fa-thumbs-up"></i></div>
+                        <div class="label"><i class="fa-regular fa-thumbs-down"></i></div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
