--- a/exercises/three-heros/index.html
+++ b/exercises/three-heros/index.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="hero-1">
+            <h2>Look!</h2>
+            <h4>At this dude.</h4>
+            <a href="hero-2.html">Wow!</a>
+        </div>
     </body>
 </html>
