product-comparison-page

--- a/exercises/product-comparison-page/index.html
+++ b/exercises/product-comparison-page/index.html
@@ -4,24 +4,80 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Product Comparison Page</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
+        <!-- cards -->
         <div id="cards">
+            <h1>PITTSBURGHColor SAE Ratcheting Combination Wrench Set, 6 Piece</h1>
             <div class="single-column card-container">
                 <div class="card">
                     <h3>Quick Identification</h3>
                     <p>Color coded for easy size identification</p>
                 </div>
-
                 <div class="card">
                     <h3>Sizes Available</h3>
                     <p>5/16 in., 3/8 in., 7/16 in., 1/2 in., 9/16 in., 5/8 in.</p>
                 </div>
-
                 <div class="card">
                     <h3>Great Angle Offset</h3>
                     <p>15 degree angle offset  with open ends</p>
+                </div>
+            </div>
+        <!-- media and text -->
+        <div id="media-text">
+            <div class="single-column">
+                <div class="side-by-side">
+                    <div class="image-container">
+                         <img src="images/product1.jpeg" alt="6-piece wrench set">
+                    </div>
+                    <div class="text-container">
+                        <h3>Each wrench features 12 point ratcheting box ends for quick, smooth ratchet action.</h3>
+                        <a href="https://www.harborfreight.com/6-piece-sae-color-combo-wrench-set-66053.html?ccdenc=eyJjb2RlIjoiMzExNjQxNDMiLCJza3UiOiI2NjA1MyIsImlzIjoiMjQuOTkifQ%3D%3D&utm_source=google&utm_medium=cpc&utm_campaign=20462662288&campaignid=20462662288&utm_content=151154944254&adsetid=151154944254&product=66053&store=3111&gclid=CjwKCAjwrranBhAEEiwAzbhNtfuCuJKxoY20KbQNYH1G4Jip-vATfY3jo98X6DjRmx-4Hs8GWrxwpBoC4LYQAvD_BwE" target="_blank">BUY NOW</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- comparison table -->
+        <div class="comp-table">
+            <h3>Compare PITTSBUGH SAE Ratcheting Combination Wrench to other name brands</h3>
+            <div class="comp-layout">
+                <div class="comp-row comp-header">
+                    <div></div>
+                    <div>PITTSBUGH</div>
+                    <div>Craftsman</div>
+                    <div>Hyper Tough</div>
+                </div>
+                <div class="comp-row">
+                    <div>Multipe Sizes</div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                    <div><i class="fa-regular fa-thumbs-down"></i></div>
+                </div>
+                <div class="comp-row">
+                    <div>Color Variety</div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                    <div><i class="fa-regular fa-thumbs-down"></i></div>
+                    <div><i class="fa-regular fa-thumbs-down"></i></div>
+                </div>
+                <div class="comp-row">
+                    <div>12-Point Box Ends</div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                    <div><i class="fa-regular fa-thumbs-down"></i></div>
+                </div>
+                <div class="comp-row">
+                    <div>Ajustable Jaw Size</div>
+                    <div><i class="fa-regular fa-thumbs-down"></i></div>
+                    <div><i class="fa-regular fa-thumbs-down"></i></div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                </div>
+                <div class="comp-row">
+                    <div>Offset Open Ends</div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
+                    <div><i class="fa-regular fa-thumbs-up"></i></div>
                 </div>
             </div>
         </div>
