--- a/demos/galleries-demo/index.html
+++ b/demos/galleries-demo/index.html
@@ -7,6 +7,20 @@
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="layout">
+            <h1>Gallery Content Layout</h1>
+            <h3>Landscape Gallery &lpar;grid&rpar;</h3>
+            <div class="basic-grid-gallery">
+                <img src="images/tea_L1.jpg" alt="tea 1">
+                <img src="images/tea_L2.jpg" alt="tea 2">
+                <img src="images/tea_L3.jpg" alt="tea 3">
+                <img src="images/tea_L4.jpg" alt="tea 4">
+                <img src="images/tea_L5.jpg" alt="tea 5">
+                <img src="images/tea_L6.jpg" alt="tea 6">
+                <img src="images/tea_L7.jpg" alt="tea 7">
+                <img src="images/tea_L8.jpg" alt="tea 8">
+                <img src="images/tea_L9.jpg" alt="tea 9">
+            </div>
+        </div>
     </body>
 </html>
