--- a/demos/galleries-demo/index.html
+++ b/demos/galleries-demo/index.html
@@ -21,6 +21,30 @@
                 <img src="images/tea_L8.jpg" alt="tea 8">
                 <img src="images/tea_L9.jpg" alt="tea 9">
             </div>
+            <h3>Portrait Gallery &lpar;grid&rpar;</h3>
+            <div class="basic-grid-gallery">
+                <img src="images/tea_P1.jpg" alt="tea 1">
+                <img src="images/tea_P2.jpg" alt="tea 2">
+                <img src="images/tea_P3.jpg" alt="tea 3">
+                <img src="images/tea_P4.jpg" alt="tea 4">
+                <img src="images/tea_P5.jpg" alt="tea 5">
+                <img src="images/tea_P6.jpg" alt="tea 6">
+                <img src="images/tea_P7.jpg" alt="tea 7">
+                <img src="images/tea_P8.jpg" alt="tea 8">
+                <img src="images/tea_P9.jpg" alt="tea 9">
+            </div>
+            <h3>Mixed Gallery &lpar;cropped grid&rpar;</h3>
+            <div class="cropped-grid-gallery">
+                <img src="images/coffee_P3.jpg" alt="coffee">
+                <img src="images/coffee_L1.jpg" alt="coffee">
+                <img src="images/coffee_P1.jpg" alt="coffee">
+                <img src="images/coffee_L3.jpg" alt="coffee">
+                <img src="images/coffee_P4.jpg" alt="coffee">
+                <img src="images/coffee_S1.jpg" alt="coffee">
+                <img src="images/coffee_P2.jpg" alt="coffee">
+                <img src="images/coffee_S2.jpg" alt="coffee">
+                <img src="images/coffee_L2.jpg" alt="coffee">
+            </div>
         </div>
     </body>
 </html>
