--- a/demos/galleries-demo/index.html
+++ b/demos/galleries-demo/index.html
@@ -45,6 +45,30 @@
                 <img src="images/coffee_S2.jpg" alt="coffee">
                 <img src="images/coffee_L2.jpg" alt="coffee">
             </div>
+            <h3>Horizontal Masony Gallery &lpar;flex&rpar;</h3>
+            <div class="hor-mas-gallery">
+                <img src="images/coffee_P3.jpg" alt="coffee">
+                <img src="images/coffee_L1.jpg" alt="coffee">
+                <img src="images/coffee_P1.jpg" alt="coffee">
+                <img src="images/coffee_L3.jpg" alt="coffee">
+                <img src="images/coffee_P4.jpg" alt="coffee">
+                <img src="images/coffee_S1.jpg" alt="coffee">
+                <img src="images/coffee_P2.jpg" alt="coffee">
+                <img src="images/coffee_S2.jpg" alt="coffee">
+                <img src="images/coffee_L2.jpg" alt="coffee">
+            </div>
+            <h3>Vertical Masony Gallery &lpar;columns&rpar;</h3>
+            <div class="vert-mas-gallery">
+                <img src="images/coffee_P3.jpg" alt="coffee">
+                <img src="images/coffee_L1.jpg" alt="coffee">
+                <img src="images/coffee_P1.jpg" alt="coffee">
+                <img src="images/coffee_L3.jpg" alt="coffee">
+                <img src="images/coffee_P4.jpg" alt="coffee">
+                <img src="images/coffee_S1.jpg" alt="coffee">
+                <img src="images/coffee_P2.jpg" alt="coffee">
+                <img src="images/coffee_S2.jpg" alt="coffee">
+                <img src="images/coffee_L2.jpg" alt="coffee">
+            </div>
         </div>
     </body>
 </html>
