themed-gallery-exercise

--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -10,22 +10,22 @@
         <div id="background-image">
             <div id="layout">
                 <div class="hero">
-                    <h2>Vintage Gallery</h2>
+                    <h2>Kae's Vintage Gallery</h2>
                     <img src="images/img13.jpg" alt="graffiti">
                 </div>
                 <div class="images">
-                    <img src="images/img1.jpg" alt="pic">
-                    <img src="images/img2.jpg" alt="pic">
-                    <img src="images/img3.jpg" alt="pic">
-                    <img src="images/img4.jpg" alt="pic">
-                    <img src="images/img5.jpg" alt="pic">
-                    <img src="images/img6.jpg" alt="pic">
-                    <img src="images/img7.jpg" alt="pic">
-                    <img src="images/img8.jpg" alt="pic">
-                    <img src="images/img9.jpg" alt="pic">
-                    <img src="images/img10.jpg" alt="pic">
-                    <img src="images/img11.jpg" alt="pic">
-                    <img src="images/img12.jpg" alt="pic">
+                    <img src="images/img1.jpg" alt="music">
+                    <img src="images/img2.jpg" alt="car">
+                    <img src="images/img3.jpg" alt="tv">
+                    <img src="images/img4.jpg" alt="pepsi">
+                    <img src="images/img5.jpg" alt="ride">
+                    <img src="images/img6.jpg" alt="stairs">
+                    <img src="images/img7.jpg" alt="old car">
+                    <img src="images/img8.jpg" alt="painting">
+                    <img src="images/img9.jpg" alt="lady">
+                    <img src="images/img10.jpg" alt="train">
+                    <img src="images/img11.jpg" alt="motel">
+                    <img src="images/img12.jpg" alt="building">
                 </div>
             </div>
         </div>
