--- a/gallery.html
+++ b/gallery.html
@@ -11,5 +11,14 @@
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
+        <div id="photo-showcase">
+            <img src="images/pic1.jpg" alt="portfolio">
+            <img src="images/pic2.jpg" alt="portfolio">
+            <img src="images/pic3.jpg" alt="portfolio">
+            <img src="images/pic4.jpg" alt="portfolio">
+            <img src="images/pic5.jpg" alt="portfolio">
+            <img src="images/pic6.jpg" alt="portfolio">
+            <img src="images/pic7.jpg" alt="portfolio">
+        </div>
     </body>
 </html>
