--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -9,8 +9,8 @@
     <body>
         <div id="background-image">
             <div id="layout">
+                <div id="h2"><h2>Kae's Vintage Gallery</h2></div>
                 <div class="hero">
-                    <h2>Kae's Vintage Gallery</h2>
                     <img src="images/img13.jpg" alt="graffiti">
                 </div>
                 <div class="images">
