--- a/gallery.html
+++ b/gallery.html
@@ -4,22 +4,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Gallery</title>
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
-        <h1>Gallery</h1>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
+        <div id="main-components">
+            <h1>Gallery</h1>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+        </div>
         <div id="layout">
-            <div id="photo-showcase">
-                <img src="images/pic1.jpg" alt="portfolio">
-                <img src="images/pic2.jpg" alt="portfolio">
-                <img src="images/pic3.jpg" alt="portfolio">
-                <img src="images/pic4.jpg" alt="portfolio">
-                <img src="images/pic5.jpg" alt="portfolio">
-                <img src="images/pic6.jpg" alt="portfolio">
-                <img src="images/pic7.jpg" alt="portfolio">
+            <h3>Class Projects</h3>
+            <div class="mixed-layout">
+                <img src="images/pic1.jpg" alt="girl portrait">
+                <p>Portrait Illustration</p>
+                <img src="images/pic2.jpg" alt="jail house">
+                <p>Architecture Illustration </p>
+                <img src="images/pic3.jpg" alt="national park">
+                <p>National Park Poster</p>
+                <img src="images/pic5.jpg" alt="book cover">
+                <p>Book Cover</p>
+                <img src="images/pic4.jpg" alt="logo">
+                <p>Logo Design</p>
+                <img src="images/pic6.jpg" alt="character">
+                <p>Character Design</p>
+                <img src="images/pic7.jpg" alt="shapes">
+                <p>Vale Scale Drawing</p>
             </div>
         </div>
     </body>
