--- a/gallery.html
+++ b/gallery.html
@@ -18,19 +18,53 @@
             <h3>Class Projects</h3>
             <div class="mixed-layout">
                 <img src="images/pic1.jpg" alt="girl portrait">
-                <p>Portrait Illustration</p>
+                    <p>Portrait Illustration</p>
                 <img src="images/pic2.jpg" alt="jail house">
-                <p>Architecture Illustration </p>
+                    <p>Architecture Illustration </p>
                 <img src="images/pic3.jpg" alt="national park">
-                <p>National Park Poster</p>
+                    <p>National Park Poster</p>
                 <img src="images/pic5.jpg" alt="book cover">
-                <p>Book Cover</p>
+                    <p>Book Cover</p>
                 <img src="images/pic4.jpg" alt="logo">
-                <p>Logo Design</p>
+                    <p>Logo Design</p>
                 <img src="images/pic6.jpg" alt="character">
-                <p>Character Design</p>
+                    <p>Character Design</p>
                 <img src="images/pic7.jpg" alt="shapes">
-                <p>Vale Scale Drawing</p>
+                    <p>Vale Scale Drawing</p>
+            </div>
+            <h3>Personal Projects</h3>
+            <div class="mixed-layout">
+                <img src="images/person1.jpg" alt="first pic">
+                <img src="images/person2.jpg" alt="">
+                <img src="images/person3.JPG" alt="">
+                <img src="images/person4.jpg" alt="">
+                <img src="images/person5.jpg" alt="">
+                <img src="images/person6.PNG" alt="">
+                <img src="images/person7.jpg" alt="">
+                <img src="images/person8.jpg" alt="">
+                <img src="images/person9.jpg" alt="">
+                <img src="images/person10.PNG" alt="">
+                <img src="images/person11.jpg" alt="">
+                <img src="images/person12.jpg" alt="">
+                <img src="images/person13.jpg" alt="">
+                <img src="images/person14.PNG" alt="">
+                <img src="images/person15.PNG" alt="">
+                <img src="images/person16jpg" alt="">
+                <img src="images/person17.jpg" alt="">
+                <img src="images/person18.jpg" alt="">
+                <img src="images/person19.jpg" alt="">
+                <img src="images/person20.jpg" alt="">
+                <img src="images/person21.jpg" alt="">
+                <img src="images/person22.JPG" alt="">
+                <img src="images/person23.jpg" alt="">
+                <img src="images/person24.PNG" alt="">
+                <img src="images/person25.PNG" alt="">
+                <img src="images/person26.PNG" alt="">
+                <img src="images/person27.png" alt="">
+                <img src="images/person28.PNG" alt="">
+                <img src="images/person29.jpg" alt="">
+                <img src="images/person30.jpeg" alt="">
+
             </div>
         </div>
     </body>
