--- a/gallery.html
+++ b/gallery.html
@@ -34,36 +34,64 @@
             </div>
             <h3>Personal Projects</h3>
             <div class="mixed-layout">
-                <img src="images/person1.jpg" alt="first pic">
+                <img src="images/person1.jpg" alt="">
+                    <p>"Man and Woman"</p>
                 <img src="images/person2.jpg" alt="">
+                    <p>"Wedding Poster"</p>
                 <img src="images/person3.JPG" alt="">
+                    <p>"Self Portrait: Cloudy"</p>
                 <img src="images/person4.jpg" alt="">
+                    <p>"Raven"</p>
                 <img src="images/person5.jpg" alt="">
+                    <p>"Thinking Fox"</p>
                 <img src="images/person6.PNG" alt="">
+                    <p>"Tales of a Siren"</p>
                 <img src="images/person7.jpg" alt="">
+                    <p>"A Murder"</p>
                 <img src="images/person8.jpg" alt="">
+                    <p>"A Fool"</p>
                 <img src="images/person9.jpg" alt="">
+                    <p>"Self Portrait: Colors"</p>
                 <img src="images/person10.PNG" alt="">
+                    <p>"Lady Lena"</p>
                 <img src="images/person11.jpg" alt="">
+                    <p>"Aphrodite Rendering"</p>
                 <img src="images/person12.jpg" alt="">
+                    <p>"Skull"</p>
                 <img src="images/person13.jpg" alt="">
+                    <p>"Reflections"</p>
                 <img src="images/person14.PNG" alt="">
+                    <p>"Life Reborn"</p>
                 <img src="images/person30.jpeg" alt="">
+                    <p>"Abandoned by Nature"</p>
                 <img src="images/person16jpg" alt="">
                 <img src="images/person17.jpg" alt="">
+                    <p>"Red-Haired"</p>
                 <img src="images/person18.jpg" alt="">
+                    <p>"Sorrowful Sight"</p>
                 <img src="images/person19.jpg" alt="">
+                    <p>"A Cat, Bradley"</p>
                 <img src="images/person20.jpg" alt="">
+                    <p>"A Cat, Coco"</p>
                 <img src="images/person21.jpg" alt="">
+                    <p>"Tatted Woman"</p>
                 <img src="images/person22.JPG" alt="">
+                    <p>"Eye of Rage"</p>
                 <img src="images/person23.jpg" alt="">
+                    <p>"Flowers from the Imagination"</p>
                 <img src="images/person24.PNG" alt="">
+                    <p>"Lovers"</p>
                 <img src="images/person25.PNG" alt="">
+                    <p>"Self Portrait: Stare"</p>
                 <img src="images/person26.PNG" alt="">
+                    <p>"Sunset"</p>
                 <img src="images/person27.png" alt="">
                 <img src="images/person28.PNG" alt="">
+                    <p>"Smoke"</p>
                 <img src="images/person29.jpg" alt="">
+                    <p>"Bouquet"</p>
                 <img src="images/person15.PNG" alt="">
+                    <p>"Posing Lady"</p>
             </div>
         </div>
     </body>
