--- a/gallery.html
+++ b/gallery.html
@@ -19,25 +19,34 @@
             <div class="mixed-layout">
                 <img src="images/pic1.jpg" alt="girl portrait">
                     <p>Portrait Illustration</p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic2.jpg" alt="jail house">
                     <p>Architecture Illustration </p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic3.jpg" alt="national park">
                     <p>National Park Poster</p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic5.jpg" alt="book cover">
                     <p>Book Cover</p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic4.jpg" alt="logo">
                     <p>Logo Design</p>
+                    <p class="small-text"><i>Adobe Illustrator, Photoshop</i></p>
                 <img src="images/pic6.jpg" alt="character">
                     <p>Character Design</p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic7.jpg" alt="shapes">
-                    <p>Vale Scale Drawing</p>
+                    <p>Value Scale Drawing</p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
             </div>
             <h3>Personal Projects</h3>
             <div class="mixed-layout">
                 <img src="images/person1.jpg" alt="">
                     <p>"Man and Woman"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person2.jpg" alt="">
                     <p>"Wedding Poster"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person3.JPG" alt="">
                     <p>"Self Portrait: Cloudy"</p>
                 <img src="images/person4.jpg" alt="">
@@ -46,20 +55,25 @@
                     <p>"Thinking Fox"</p>
                 <img src="images/person6.PNG" alt="">
                     <p>"Tales of a Siren"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person7.jpg" alt="">
                     <p>"A Murder"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person8.jpg" alt="">
                     <p>"A Fool"</p>
                 <img src="images/person9.jpg" alt="">
                     <p>"Self Portrait: Colors"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person10.PNG" alt="">
                     <p>"Lady Lena"</p>
                 <img src="images/person11.jpg" alt="">
                     <p>"Aphrodite Rendering"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person12.jpg" alt="">
                     <p>"Skull"</p>
                 <img src="images/person13.jpg" alt="">
                     <p>"Reflections"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person14.PNG" alt="">
                     <p>"Life Reborn"</p>
                 <img src="images/person30.jpeg" alt="">
@@ -67,8 +81,10 @@
                 <img src="images/person16jpg" alt="">
                 <img src="images/person17.jpg" alt="">
                     <p>"Red-Haired"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person18.jpg" alt="">
                     <p>"Sorrowful Sight"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person19.jpg" alt="">
                     <p>"A Cat, Bradley"</p>
                 <img src="images/person20.jpg" alt="">
