--- a/gallery.html
+++ b/gallery.html
@@ -44,15 +44,12 @@
                 <img src="images/person1.jpg" alt="">
                     <p>"Man and Woman"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
-                <img src="images/person2.jpg" alt="">
-                    <p>"Wedding Poster"</p>
-                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person3.JPG" alt="">
                     <p>"Self Portrait: Cloudy"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person4.jpg" alt="">
                     <p>"Raven"</p>
-                <img src="images/person5.jpg" alt="">
-                    <p>"Thinking Fox"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person6.PNG" alt="">
                     <p>"Tales of a Siren"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
@@ -61,21 +58,25 @@
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person8.jpg" alt="">
                     <p>"A Fool"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person9.jpg" alt="">
                     <p>"Self Portrait: Colors"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person10.PNG" alt="">
                     <p>"Lady Lena"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person11.jpg" alt="">
                     <p>"Aphrodite Rendering"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person12.jpg" alt="">
                     <p>"Skull"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person13.jpg" alt="">
                     <p>"Reflections"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person14.PNG" alt="">
                     <p>"Life Reborn"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person30.jpeg" alt="">
                     <p>"Abandoned by Nature"</p>
                 <img src="images/person16jpg" alt="">
@@ -87,27 +88,34 @@
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person19.jpg" alt="">
                     <p>"A Cat, Bradley"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person20.jpg" alt="">
                     <p>"A Cat, Coco"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person21.jpg" alt="">
                     <p>"Tatted Woman"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person22.JPG" alt="">
                     <p>"Eye of Rage"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person23.jpg" alt="">
                     <p>"Flowers from the Imagination"</p>
+                    <p class="small-text"><i>Cardstock, Posca Markers</i></p>
                 <img src="images/person24.PNG" alt="">
                     <p>"Lovers"</p>
                 <img src="images/person25.PNG" alt="">
                     <p>"Self Portrait: Stare"</p>
+                    <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person26.PNG" alt="">
                     <p>"Sunset"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person27.png" alt="">
                 <img src="images/person28.PNG" alt="">
                     <p>"Smoke"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person29.jpg" alt="">
                     <p>"Bouquet"</p>
-                <img src="images/person15.PNG" alt="">
-                    <p>"Posing Lady"</p>
+                    <p class="small-text"><i>Cardstock, Posca Markers</i></p>
             </div>
         </div>
     </body>
