--- a/gallery.html
+++ b/gallery.html
@@ -79,6 +79,7 @@
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person30.jpeg" alt="">
                     <p>"Abandoned by Nature"</p>
+                    <p class="small-text"><i>Cardstock, Posca Markers</i></p>
                 <img src="images/person16jpg" alt="">
                 <img src="images/person17.jpg" alt="">
                     <p>"Red-Haired"</p>
@@ -103,6 +104,7 @@
                     <p class="small-text"><i>Cardstock, Posca Markers</i></p>
                 <img src="images/person24.PNG" alt="">
                     <p>"Lovers"</p>
+                    <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person25.PNG" alt="">
                     <p>"Self Portrait: Stare"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
