--- a/gallery.html
+++ b/gallery.html
@@ -18,105 +18,105 @@
             <h3>Class Projects</h3>
             <div class="mixed-layout">
                 <img src="images/pic1.jpg" alt="girl portrait">
-                    <p>Portrait Illustration</p>
+                    <p class="title">Portrait Illustration</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic2.jpg" alt="jail house">
-                    <p>Architecture Illustration </p>
+                    <p class="title">Architecture Illustration </p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic3.jpg" alt="national park">
-                    <p>National Park Poster</p>
+                    <p class="title">National Park Poster</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic5.jpg" alt="book cover">
-                    <p>Book Cover</p>
+                    <p class="title">Book Cover</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic4.jpg" alt="logo">
-                    <p>Logo Design</p>
+                    <p class="title">Logo Design</p>
                     <p class="small-text"><i>Adobe Illustrator, Photoshop</i></p>
                 <img src="images/pic6.jpg" alt="character">
-                    <p>Character Design</p>
+                    <p class="title">Character Design</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic7.jpg" alt="shapes">
-                    <p>Value Scale Drawing</p>
+                    <p class="title">Value Scale Drawing</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
             </div>
             <h3>Personal Projects</h3>
             <div class="mixed-layout">
                 <img src="images/person1.jpg" alt="">
-                    <p>"Man and Woman"</p>
+                    <p class="title">"Man and Woman"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person3.JPG" alt="">
-                    <p>"Self Portrait: Cloudy"</p>
+                    <p class="title">"Self Portrait: Cloudy"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person4.jpg" alt="">
-                    <p>"Raven"</p>
+                    <p class="title">"Raven"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person6.PNG" alt="">
-                    <p>"Tales of a Siren"</p>
+                    <p class="title">"Tales of a Siren"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person7.jpg" alt="">
-                    <p>"A Murder"</p>
+                    <p class="title">"A Murder"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person8.jpg" alt="">
-                    <p>"A Fool"</p>
+                    <p class="title">"A Fool"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person9.jpg" alt="">
-                    <p>"Self Portrait: Colors"</p>
+                    <p class="title">"Self Portrait: Colors"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person10.PNG" alt="">
-                    <p>"Lady Lena"</p>
+                    <p class="title">"Lady Lena"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person11.jpg" alt="">
-                    <p>"Aphrodite Rendering"</p>
+                    <p class="title">"Aphrodite Rendering"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person12.jpg" alt="">
-                    <p>"Skull"</p>
+                    <p class="title">"Skull"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person13.jpg" alt="">
-                    <p>"Reflections"</p>
+                    <p class="title">"Reflections"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person14.PNG" alt="">
-                    <p>"Life Reborn"</p>
+                    <p class="title">"Life Reborn"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person30.jpeg" alt="">
-                    <p>"Abandoned by Nature"</p>
+                    <p class="title">"Abandoned by Nature"</p>
                     <p class="small-text"><i>Cardstock, Posca Markers</i></p>
                 <img src="images/person16jpg" alt="">
                 <img src="images/person17.jpg" alt="">
-                    <p>"Red-Haired"</p>
+                    <p class="title">"Red-Haired"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person18.jpg" alt="">
-                    <p>"Sorrowful Sight"</p>
+                    <p class="title">"Sorrowful Sight"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person19.jpg" alt="">
-                    <p>"A Cat, Bradley"</p>
+                    <p class="title">"A Cat, Bradley"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person20.jpg" alt="">
-                    <p>"A Cat, Coco"</p>
+                    <p class="title">"A Cat, Coco"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person21.jpg" alt="">
-                    <p>"Tatted Woman"</p>
+                    <p class="title">"Tatted Woman"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person22.JPG" alt="">
-                    <p>"Eye of Rage"</p>
+                    <p class="title">"Eye of Rage"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person23.jpg" alt="">
-                    <p>"Flowers from the Imagination"</p>
+                    <p class="title">"Flowers from the Imagination"</p>
                     <p class="small-text"><i>Cardstock, Posca Markers</i></p>
                 <img src="images/person24.PNG" alt="">
-                    <p>"Lovers"</p>
+                    <p class="title">"Lovers"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person25.PNG" alt="">
-                    <p>"Self Portrait: Stare"</p>
+                    <p class="title">"Self Portrait: Stare"</p>
                     <p class="small-text"><i>Procreate, iPad</i></p>
                 <img src="images/person26.PNG" alt="">
-                    <p>"Sunset"</p>
+                    <p class="title">"Sunset"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person27.png" alt="">
                 <img src="images/person28.PNG" alt="">
-                    <p>"Smoke"</p>
+                    <p class="title">"Smoke"</p>
                     <p class="small-text"><i>Sketchbook App, iPhone</i></p>
                 <img src="images/person29.jpg" alt="">
-                    <p>"Bouquet"</p>
+                    <p class="title">"Bouquet"</p>
                     <p class="small-text"><i>Cardstock, Posca Markers</i></p>
             </div>
         </div>
