--- a/about.html
+++ b/about.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
-        <h1>About</h1>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
+        <div id="main-components">
+            <h1>About</h1>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+        </div>
     </body>
     <hr>
     <div>
