--- a/about.html
+++ b/about.html
@@ -14,22 +14,29 @@
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
         </div>
+        <div id="header">
+            <h3>Kaelyn Kluding (Kae)</h3>
+        </div>
+        <div id="main-layout">
+            
+            <img
+                src="images/kae.JPG"
+                alt="selfie"
+            >
+            <div class="header-text">
+                <h4>About Me</h4>
+                <p>
+                    I have always had a deep interest in all things art. From incoherent scribbles when I was a child, to complex portraits when I entered high school, art has always held a place in my life. While I don't always finish my personal pieces, I constantly have a new idea forming in my mind; whether it be a digital painting, a quick sketch, or a logo for a made up company.
+                </p>
+                <h4>Skills</h4>
+                <ul>
+                    <li>Adobe Photoshop</li>
+                    <li>Adobe Illustrator</li>
+                    <li>HTML and CSS</li>
+                    <li>Web Design</li>
+                    <li>Digital Painting</li>
+                </ul>
+            </div>
+        </div>
     </body>
-    <hr>
-    <div>
-        <h2>
-            Hello! My name is Kaelyn Kluding.
-            <i>But call me Kae.</i>
-        </h2>
-        <img
-            src="images/kae.JPG"
-            alt="selfie"
-        >
-        <p class="paragraph-1">
-            I am (almost) 22 years old and  I was born in Des Moines, Iowa but I currenly live in Jacksonville, Florida. I've lived here most of my life, but I still like to tell people that Iowa will always be my home. I have a wonderful boyfriend and we have a cat-child named Bradley. 
-        </p>
-        <p class="paragraph-2">
-            I have always had a deep interest in all things art. From incoherent scribbles when I was a child, to complex portraits when I entered high school, art has always held a place in my life. While I don't always finish my personal pieces, I constantly have a new idea forming in my mind; whether it be a digital painting, a quick sketch, or a logo for a made up company.
-        </p>
-    </div>
 </html>
