--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,14 @@
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
         </div>
+        <div id="main-layout">
+            <h3>Dude, call me. (904) 657-3377.</h3>
+            <img
+                src="https://media.istockphoto.com/id/692783492/photo/cute-european-cat-portrait.jpg?s=612x612&w=0&k=20&c=ULieaIJfAS2hPWDIu-PGlE-NwHQq5CrEioHlN7AnUW8="
+            >
+            <p>
+                (this cat is NOT planning a murder)
+            </p>
+        </div>
     </body>
 </html>
