--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
         </div>
+        <div id="main-layout">
+            <p>this is da homepage</p>
+        </div>
     </body>
 </html>
