--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,18 @@
             <h3>Dude, call me. (904) 657-3377.</h3>
             <img
                 src="https://media.istockphoto.com/id/692783492/photo/cute-european-cat-portrait.jpg?s=612x612&w=0&k=20&c=ULieaIJfAS2hPWDIu-PGlE-NwHQq5CrEioHlN7AnUW8="
+                alt="angry cat"
             >
             <p>
                 (this cat is NOT planning a murder)
             </p>
+        </div>
+        <div id="second-layout">
+            <img
+                src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/happy-cat-jamart-photography.jpg"
+                alt="happy cat"
+            >
+            <p>This cat probably has a silly name, like Gerald. Maybe even Ben. What a silly little man. However, he IS planning a murder.</p>
         </div>
     </body>
 </html>
