--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <a href="about.html">About</a>
         </div>
         <div id="main-layout">
-            <p>this is da homepage</p>
+            <img
+                src="https://ih1.redbubble.net/image.966109971.3352/flat,750x,075,f-pad,750x1000,f8f8f8.jpg"
+                alt="eye see you"
+            >
         </div>
     </body>
 </html>
