--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="about.html">About</a>
         </div>
         <div id="main-layout">
+            <p>I'm not sure what to put on this page yet..</p>
             <img
                 src="https://ih1.redbubble.net/image.966109971.3352/flat,750x,075,f-pad,750x1000,f8f8f8.jpg"
                 alt="eye see you"
