still gotta do css

--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
         <link rel="stylesheet" href="css/home.css">
     </head>
     <body>
-        
-            <div id="main-components">
-                <h1>Homepage</h1>
-                <a href="index.html">Home</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="contact.html">Contact</a>
-                <a href="about.html">About</a>
-            </div>
+        <div id="main-components">
+            <h1>Homepage</h1>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+        </div>
         <div id="layout">    
             <h3>Kae's Portfolio Website</h3>
             <div id="main-layout"></div>
             <p>Aphrodite Rendering <i>Procreate, iPad</i></p>
+        </div>
+        <div id="card">
+            <h2>Gallery</h2>
+            <p>Come see some of my proudest work.</p>
+        </div>
+        <div id="cards">
+            <h2>Contact</h2>
+            <p>Find out the best ways to contact me.</p>
+        </div>
+        <div id="cards">
+            <h2>About</h2>
+            <p>Learn all about me.</p>
         </div>
     </body>
 </html>
