--- a/exercises/client-navbars/index2.html
+++ b/exercises/client-navbars/index2.html
@@ -4,9 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Client 2 Navbar</title>
-        <link rel="stylesheet" href="css/name.css">
+        <link rel="stylesheet" href="css/index2.css">
     </head>
     <body>
-        
+        <div id="header">
+            <div class="nav">
+                <p id="logo">AngelEars</p>
+                <a href="index3.html">News</a>
+                <a href="index3.html">Editorials</a>
+                <a href="index3.html">Media</a>
+                <a href="index3.html" class="button">SUBSCRIBE NOW</a>
+            </div>
+        </div>
     </body>
 </html>
