--- a/exercises/client-navbars/index3.html
+++ b/exercises/client-navbars/index3.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="header">
+            <div class="nav">
+                <p id="logo">AngelEars</p>
+                <a href="index3.html">Jobs</a>
+                <a href="index3.html">Blog</a>
+                <a href="index3.html">Orders</a>
+                <a href="index.html">Account</a>
+                <a href="index3.html" class="button">Sign In</a>
+            </div>
+        </div>
     </body>
 </html>
