--- a/exercises/client-navbars/index.html
+++ b/exercises/client-navbars/index.html
@@ -10,8 +10,8 @@
         <div id="header">
             <div class="nav">
                 <p id="logo">Sculptor's Haven</p>
-                <a href="#">Gallery</a>
-                <a href="#">Contact</a>
+                <a href="index2.html">Gallery</a>
+                <a href="index2.html">Contact</a>
             </div>
         </div>
     </body>
