--- a/exercises/client-navbars/index3.html
+++ b/exercises/client-navbars/index3.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Client 3 Navbar</title>
-        <link rel="stylesheet" href="css/name.css">
+        <link rel="stylesheet" href="css/index3.css">
     </head>
     <body>
         <div id="header">
             <div class="nav">
-                <p id="logo">AngelEars</p>
+                <p id="logo">Tailored Spooks</p>
                 <a href="index3.html">Jobs</a>
                 <a href="index3.html">Blog</a>
                 <a href="index3.html">Orders</a>
