--- a/exercises/client-navbars/index3.html
+++ b/exercises/client-navbars/index3.html
@@ -7,13 +7,16 @@
         <link rel="stylesheet" href="css/index3.css">
     </head>
     <body>
+        <div id="top-header">
+            <p>BOGO 50% off on select costumes - Use code: BOGO50</p>
+        </div>
         <div id="header">
             <div class="nav">
                 <p id="logo">Tailored Spooks</p>
-                <a href="index3.html">Jobs</a>
-                <a href="index3.html">Blog</a>
-                <a href="index3.html">Orders</a>
-                <a href="index.html">Account</a>
+                <span id="link"><a href="index3.html">Jobs</a></span>
+                <span id="link"><a href="index3.html">Blog</a></span>
+                <span id="link"><a href="index3.html">Orders</a></span>
+                <span id="link"><a href="index.html">Account</a></span>
                 <a href="index3.html" class="button">Sign In</a>
             </div>
         </div>
