--- a/exercises/client-navbars/index3.html
+++ b/exercises/client-navbars/index3.html
@@ -20,5 +20,13 @@
                 <a href="index3.html" class="button">Sign In</a>
             </div>
         </div>
+        <div id="bottom-header">
+            <a href="#">New Arrivals</a>
+            <a href="#">Costumes</a>
+            <a href="#">Accessories</a>
+            <a href="#">Decorations</a>
+            <a href="#">Animatronics</a>
+            <a href="#">On Sale</a>
+        </div>
     </body>
 </html>
