--- a/exercises/client-navbars/index3.html
+++ b/exercises/client-navbars/index3.html
@@ -13,20 +13,20 @@
         <div id="header">
             <div class="nav">
                 <p id="logo">Tailored Spooks</p>
-                <span id="link"><a href="index3.html">Jobs</a></span>
-                <span id="link"><a href="index3.html">Blog</a></span>
-                <span id="link"><a href="index3.html">Orders</a></span>
+                <span id="link"><a href="index.html">Jobs</a></span>
+                <span id="link"><a href="index.html">Blog</a></span>
+                <span id="link"><a href="index.html">Orders</a></span>
                 <span id="link"><a href="index.html">Account</a></span>
-                <a href="index3.html" class="button">Sign In</a>
+                <a href="index.html" class="button">Sign In</a>
             </div>
         </div>
         <div id="bottom-header">
-            <a href="#">New Arrivals</a>
-            <a href="#">Costumes</a>
-            <a href="#">Accessories</a>
-            <a href="#">Decorations</a>
-            <a href="#">Animatronics</a>
-            <a href="#">On Sale</a>
+            <a href="index.html">New Arrivals</a>
+            <a href="index.html">Costumes</a>
+            <a href="index.html">Accessories</a>
+            <a href="index.html">Decorations</a>
+            <a href="index.html">Animatronics</a>
+            <a href="index.html">On Sale</a>
         </div>
     </body>
 </html>
